18 June: anyproxy 3.5.0:

    * it's a formal release of 3.4.0@beta.

27 Apr: anyproxy 3.4.0@beta:

    * optimize web server and web socket interface

20 Apr 2015: anyproxy 3.3.1:

    * now you can assign your own port for web gui

31 Mar 2015: anyproxy 3.3.0:

    * optimize https features in windows
    * add switch to mute the console

20 Mar 2015: anyproxy 3.2.5:

    * bugfix for internal https server 

19 Mar 2015: anyproxy 3.2.4:

    * bugfix for absolute rule path

23 Feb 2015: anyproxy 3.2.2:

    * [bugfix for relative rule path](https://github.com/alibaba/anyproxy/pull/18)
    
10 Feb 2015: anyproxy 3.2.1:

    * bugfix for 3.2.0

10 Feb 2015: anyproxy 3.2.0:

    * using SNI when intercepting https requests

28 Jan 2015: anyproxy 3.1.2:

    * thanks to iconv-lite, almost webpage with any charset can be correctly decoded in web interface.

28 Jan 2015: anyproxy 3.1.1:

    * convert GBK to UTF8 in web interface

22 Jan 2015: anyproxy 3.1.0:

    * will NOT intercept https request by default. Use ``anyproxy --intercept`` to turn on this feature.

12 Jan 2015: anyproxy 3.0.4:

    * show anyproxy version by --version

12 Jan 2015: anyproxy 3.0.3:

    * Bugfix: https throttle

9 Jan 2015: anyproxy 3.0.2:

    * UI improvement: add link and qr code to root CA file.