@@ -48,7 +48,7 @@ function SNIPrepareCert(serverName,SNICallback){
             SNICallback(null,ctx);
         }else{
             logUtil.printLog("err occurred when prepare certs for SNI - " + err, logUtil.T_ERR);
-            logUtil.printLog("you may upgrade your Node.js to the lastest version", logUtil.T_ERR);
+            logUtil.printLog("you may upgrade your Node.js to >= v0.12", logUtil.T_ERR);
         }
     });
 }
