@@ -8,6 +8,7 @@ function printLog(content,type){
 	if(!ifPrint) return;
 
 	var tip = content;
+	
 	console.log(tip);
 }
 
