@@ -1,6 +1,6 @@
 {
   "name": "anyproxy",
-  "version": "3.5.0",
+  "version": "3.5.1",
   "description": "A fully configurable proxy in NodeJS, which can handle HTTPS requests perfectly.",
   "main": "proxy.js",
   "bin": {
